# basic_algorithm

./: .gitignore
codepass/: CMakeLists.txt
codepass/01_gugudan/: CMakeLists.txt
codepass/02_gugudan/: 02_gugudan.cpp  CMakeLists.txt
codepass/03_num_rect/: 03_num_rect.cpp  CMakeLists.txt
codepass/04_num_rect/: CMakeLists.txt
codepass/05_num_rect/: CMakeLists.txt
codepass/06_char_rect/: 06_char_rect.cpp  CMakeLists.txt
codepass/07_char_rect/: CMakeLists.txt
codepass/08_char_triangle/: CMakeLists.txt
codepass/09_char_triangle/: 09_char_triangle.c  CMakeLists.txt
codepass/10_star_triangle/: 10_star_triangle.cpp  CMakeLists.txt
codepass/11_star_triangle/: 11_star_triangle.cpp  CMakeLists.txt
codepass/12_star_triangle/: 12_star_triangle.cpp  CMakeLists.txt
codepass/13_snail_triangle/: 13_snail_triangle.cpp  CMakeLists.txt
codepass/14_pascal_triangle/: 14_pascal_triangle.cpp  CMakeLists.txt
codepass/15_snail_rectangle/: 15_snail_rectangle.cpp  CMakeLists.txt
codepass/16_diagonal_zigzag/: 16_diagonal_zigzag.cpp  CMakeLists.txt
codepass/17_char_diamond/: 17_char_diamond.cpp  CMakeLists.txt
codepass/18_divisor/: 18_divisor.cpp  CMakeLists.txt
codepass/19_divisor_n_multiple/: 19_divisor_n_multiple.cpp  CMakeLists.txt
codepass/1_gugudan/: 1_gugudan.cpp  CMakeLists.txt
codepass/20_get_divisor/: 20_get_divisor.cpp  CMakeLists.txt
codepass/21_gcd_n_lcm_1/: 21_gcd_n_lcm_1.cpp  CMakeLists.txt
codepass/22_gcd_n_lcm_2/: 22_gcd_n_lcm_2.cpp  CMakeLists.txt
codepass/23_number_reverse/: 23_number_reverse.cpp  CMakeLists.txt
codepass/24_prime_n_composite/: 24_prime_n_composite.cpp  CMakeLists.txt
codepass/25_prime_number/: 25_prime_number.cpp  CMakeLists.txt
codepass/26_get_prime_number/: 26_get_prime_number.cpp  CMakeLists.txt
codepass/28_binary_number/: CMakeLists.txt  (+1 more)
(+252 files in other folders)
