# CMakeList.txt: codepass에 대한 CMake 프로젝트, 여기에 소스를 포함하고
# 프로젝트 특정 논리를 정의합니다.
#
cmake_minimum_required (VERSION 3.8)

project ("codepass")

add_subdirectory(01_gugudan)
add_subdirectory(02_gugudan)
add_subdirectory(03_num_rect)
add_subdirectory(04_num_rect)
add_subdirectory(05_num_rect)
add_subdirectory(06_char_rect)
add_subdirectory(07_char_rect)
add_subdirectory(08_char_triangle)
add_subdirectory(09_char_triangle)
add_subdirectory(10_star_triangle)
add_subdirectory(11_star_triangle)
add_subdirectory(12_star_triangle)
add_subdirectory(13_snail_triangle)
add_subdirectory(14_pascal_triangle)
add_subdirectory(15_snail_rectangle)
add_subdirectory(16_diagonal_zigzag)
add_subdirectory(17_char_diamond)
add_subdirectory(18_divisor)
add_subdirectory(19_divisor_n_multiple)
add_subdirectory(20_get_divisor)
add_subdirectory(21_gcd_n_lcm_1)
add_subdirectory(22_gcd_n_lcm_2)
